took down apiKey

--- a/weather/index.html
+++ b/weather/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <script>
-      const apiKey ="7813dcf5208d8ce6261793fb3ef0319c";
+      const apiKey ="";
       const apiUrl ="https://api.openweathermap.org/data/2.5/weather?units=metric&q=lagos";
 
       async function checkWeather(){
